# neural-networks

./: .gitignore  Mnist_Original.ipynb  pyproject.toml  skills-lock.json
ejercicios-nn/: German_Credit.ipynb  Housing.ipynb  Mnist_Fashion.ipynb  Mnist_Original.ipynb  NN_vs_ML.ipynb  convolucion-manual.ipynb  convolucional_5_imagenes.ipynb
ejercicios-nn/mnist/: Mnist_Fashion.ipynb
ejercicios-nn/redes-convolucionales/: convolucional.ipynb  convolucional_densa_flat.ipynb
ejercicios-nn/transfer-learning/: guitar-classifier.ipynb  intro.ipynb
scripts/: download_guitars.py
